<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikhilreddy.paintcalculatorapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="32sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtLength"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:hint="@string/txtLength"
        android:gravity="center"
        android:textSize="28sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtHeight"
        android:layout_below="@+id/txtLength"
        android:layout_centerHorizontal="true"
        android:textSize="28sp"
        android:gravity="center"
        android:hint="@string/txtHeight" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnColors"
        android:layout_below="@+id/txtHeight"
        android:layout_centerHorizontal="true"
        android:entries="@array/spnColors"
        android:prompt="@string/prompt" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCost"
        android:id="@+id/btnCost"
        android:layout_below="@+id/spnColors"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:background="#6672c6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtResult"
        android:layout_below="@+id/btnCost"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgColor"
        android:layout_below="@+id/txtResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/color"
        android:contentDescription="@string/description"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
